Refactor across repository
- Move preference components to `frontend/lib/components/preference`
- Move input components to `frontend/lib/components/inputs`
- Add toast support
- Split up sqlc files
- Handle notifications via Web Push and service worker
- Break out the settings page into separate components
- Optimizations
